--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Blog. Knowledge Cafe</title>
     <script src="https://kit.fontawesome.com/4e3b307912.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class=" w-[95%]  lg:w-[82%] mx-auto">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
